# speedtest_RUST

./: .gitignore  Cargo.toml  README.md  launcher.swift
SpeedTest.app/Contents/: Info.plist
SpeedTest.app/Contents/MacOS/: SpeedTest
SpeedTest.app/Contents/MacOS/data/: history.json
SpeedTest.app/Contents/MacOS/static/reports/: speedtest_report_20260702224755.html  speedtest_report_20260702225132.html  speedtest_report_20260702_224756.html  speedtest_report_20260702_225133.html
SpeedTest.app/Contents/Resources/: icon.icns
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  charts.js
src/: api_routes.rs  config.rs  embedded.rs  iperf_controller.rs  main.rs  network_manager.rs  report_generator.rs  test_history.rs
