[package]
name = "speedtest"
version = "1.0.0"
edition = "2021"
description = "网络链路速度测试工具 - Rust 重写版"
authors = ["SpeedTest"]

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日期时间格式化
time = "0.3"

# UUID 生成
uuid = { version = "1", features = ["v4"] }

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# HTML 模板
tera = "1"

# 文件路径处理
# (标准库自带)

# SSE (Server-Sent Events)
futures = "0.3"

# 命令行参数
clap = { version = "4", features = ["derive"] }

# 嵌入式静态文件
rust-embed = "8"

# 随机数
rand = "0.8"

[profile.release]
opt-level = 2
strip = true
lto = true
